# air-quality-sensor

./: .gitignore  AUTHORS  ChangeLog  Makefile  README  README.md  air.c  air01.c  air10.c  configure.ac
src/: Makefile  Makefile.am  air-quality-sensor.1  air01.c  air10.c  de.benedikt-wildenhain.air-quality-sensor.metainfo.xml  manpage.include
